# 9_Qt_Airport_Inspector

./: .gitignore  README.md
Qt_Airport_Inspector/: CMakeLists.txt  README.md  airplane.rc  airportdb.cpp  airportdb.h  img.qrc  logindialogsql.cpp  logindialogsql.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  statistic.cpp  statistic.h  statistic.ui  structs.h
